Adjusted document properties alignment on title page (fixes #31)

--- a/src/scss/components/print/_doc-props-main.scss
+++ b/src/scss/components/print/_doc-props-main.scss
@@ -1,8 +1,17 @@
 .doc-properties-outer {
+	min-height: 150px;
+	position: relative;
+}
+
+.doc-properties-mid {
+	position: absolute;
+	width: 100%;
+	bottom: 0;
+	text-align: center;
 }
 
 .doc-properties-inner {
-	//border: 1px solid red;
+	display: inline-block;
 }
 
 .doc-property-item-outer {
